--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -100,7 +100,7 @@ CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_LOG_BUF_SHIFT=20
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
@@ -134,6 +134,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -304,7 +305,7 @@ CONFIG_ARM64_SEV_IN_LOCK_UNLOCK=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-CONFIG_ARCH_WANTS_CTXSW_LOGGING=y
+# CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
@@ -344,7 +345,7 @@ CONFIG_NO_BOOTMEM=y
 CONFIG_MEMORY_ISOLATION=y
 # CONFIG_HAVE_BOOTMEM_INFO_NODE is not set
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_SPLIT_PTLOCK_CPUS=999999
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
@@ -505,8 +506,24 @@ CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+# CONFIG_TCP_CONG_SCALABLE is not set
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -755,7 +772,7 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-CONFIG_L2TP_DEBUGFS=y
+# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1044,7 +1061,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_STAT=y
+# CONFIG_UID_STAT is not set
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_PCH_PHUB is not set
@@ -3442,7 +3459,7 @@ CONFIG_QCOM_NPA_DUMP=y
 # Firmware Drivers
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 
 #
 # Firmware Drivers
@@ -3860,6 +3877,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 # CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
 
 #
 # Random Number Generation
